package strategy.enums;

/**
 * Ajuta la prelucrarea {@code Strategy} intre diferite clase
 */
public enum SelectionPolicy {
    SHORTEST_QUEUE, SHORTEST_TIME;
}
